Bug 87555 - Fields in table-control of a form show '0' in a combobox, when GUI-language isn't English
Summary: Fields in table-control of a form show '0' in a combobox, when GUI-language i...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Lionel Elie Mamane
URL:
Whiteboard: target:4.5.0 target:4.3.6 target:4.4...
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-21 16:02 UTC by Robert Großkopf
Modified: 2015-01-07 13:31 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Open the form and have a look - '0' for all fields in "PRODUZECE" (23.43 KB, application/vnd.oasis.opendocument.base)
2014-12-21 16:02 UTC, Robert Großkopf
Details
Correct function (112.12 KB, application/pdf)
2014-12-21 17:25 UTC, Jochen
Details
not correct function (not english) (111.64 KB, application/pdf)
2014-12-21 18:17 UTC, Jochen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2014-12-21 16:02:11 UTC
Created attachment 111112 [details]
Open the form and have a look - '0' for all fields in "PRODUZECE"

We have had the same bug with table-control and textfields:
https://bugs.freedesktop.org/show_bug.cgi?id=67615

In a tablecontrol will appear '0' instead of text, if you use a combobox together with a wrong-formatted field of the table.

Open the form "fpartnerij" of the attached database and have a look at the second field "PRODUZECE". It's shown as '0' in all versions - also the versions where Bug67615 has been fixed (since LO 4.3.2)
Comment 1 Lionel Elie Mamane 2014-12-21 16:21:27 UTC
Isn't that exactly bug 67615 that regressed? Or is there a subtle difference that I'm missing?
Comment 2 Robert Großkopf 2014-12-21 16:32:57 UTC
(In reply to Lionel Elie Mamane from comment #1)
> Isn't that exactly bug 67615 that regressed? Or is there a subtle difference
> that I'm missing?

No, it isn't a regression to bug 67615. You fixed the bug for a textfield, not also for a combobox. Would be the same reason, but another place in the code.
Comment 3 Jochen 2014-12-21 16:44:57 UTC
Can confirm the bug
Windows 8.1
LO 4.2.4
Comment 4 Robert Großkopf 2014-12-21 17:09:50 UTC
(In reply to Jochen from comment #3)
> Can confirm the bug
> Windows 8.1
> LO 4.2.4

Hi Jochen,

Bug 67615 has been fixed for version LO 4.3.2 - could you test with a newer version? This bug seems to be different to the older bug. It is for comboboxes. for textfields in a tablecontrol it works since LO 4.3.2.
Comment 5 Jochen 2014-12-21 17:22:21 UTC
Hi Robert,

using LO 4.3.4 (Windows 8.1) all works fine: in the tablecontrol text appears ("company", "company 1" ...)
Bug seems to be until 4.2.x
Comment 6 Jochen 2014-12-21 17:25:13 UTC
Created attachment 111119 [details]
Correct function
Comment 7 Jochen 2014-12-21 17:26:08 UTC
Hi Robert,

s. attach "Correct function"
Is this what you want to see?
Comment 8 Lionel Elie Mamane 2014-12-21 17:33:00 UTC
(In reply to Jochen from comment #5)

> using LO 4.3.4 (Windows 8.1) all works fine: in the tablecontrol text
> appears ("company", "company 1" ...)
> Bug seems to be until 4.2.x

I reproduce.

Jochen: the bug appears only if the UI language is not English. Try switching to non-English UI.
Comment 9 Lionel Elie Mamane 2014-12-21 17:39:44 UTC
(In reply to robert from comment #2)
> (In reply to Lionel Elie Mamane from comment #1)
> > Isn't that exactly bug 67615 that regressed? Or is there a subtle difference
> > that I'm missing?
> 
> No, it isn't a regression to bug 67615. You fixed the bug for a textfield,
> not also for a combobox. Would be the same reason, but another place in the
> code.

Yes, just like the title of the bug says. Sorry, a bit tired/distracted these evening. Should be easy to fix indeed...
Comment 10 Commit Notification 2014-12-21 17:48:47 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=17402c73cfd513ade823a5f26c17371766047b6d

fdo#87555 ComboBox in table should use same formatting as floating ComboBox

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Jochen 2014-12-21 18:17:49 UTC
Created attachment 111122 [details]
not correct function (not english)
Comment 12 Jochen 2014-12-21 18:27:57 UTC
(In reply to Lionel Elie Mamane from comment #8)
> <snip> Try switching to non-English UI.

Sorry. I forgot the problem with "not-english".
In Italian and using LO 4.3.4 (Windows 8.1) I can confirm the bug also.
Comment 13 Commit Notification 2015-01-07 13:30:57 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b8dfd3ae3c322d9cabc78e76c5a9d18ead5823cd&h=libreoffice-4-3

fdo#87555 ComboBox in table should use same formatting as floating ComboBox

It will be available in 4.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2015-01-07 13:31:06 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fdf69336eb52905113e1d9e6e453ae4e655e2aba&h=libreoffice-4-4

fdo#87555 ComboBox in table should use same formatting as floating ComboBox

It will be available in 4.4.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.