fdo#87555 ComboBox in table should use same formatting as floating ComboBox

Same as fdo#67615 for TexFields, but for ComboBox.
Same problem, same cause, same solution.
ListBox seems not to have this problem :)

Change-Id: I953c5452f6c313b8940fbd1048b4c901b331fc58